--- a/lek4.css
+++ b/lek4.css
@@ -26,7 +26,7 @@ label {
   background-color: rgb(44, 43, 43);
 }
 
-/* NAVBAR */
+/*  -------------------- NAVBAR ----------------------- */
 
 .navdiv {
   align-items: center;
@@ -35,6 +35,7 @@ label {
   box-shadow: 0px 0px 20px;
   background-color: rgb(36, 36, 36);
 }
+/* DROPDOWN */
 
 .dropdowndiv {
   display: none;
@@ -103,6 +104,7 @@ label {
     min-width: 90%;
   }
 }
+/* DROPDOWN END */
 
 .uldiv {
   min-width: fit-content;
@@ -147,9 +149,9 @@ li:active {
   max-width: 150px;
 }
 
-/* NAVBAR END */
+/* ----------------------- NAVBAR END-----------------------  */
 
-/* BLOGG */
+/*-----------------------  BLOGG ----------------------- */
 
 @media screen and (max-width: 700px) {
   .mainbloggdiv {
@@ -158,14 +160,13 @@ li:active {
     row-gap: 40px;
     min-width: 450px;
   }
-  .iframediv {
-    display: flex;
-    flex-direction: row;
-  }
 }
 .mainbloggdiv {
+  align-items: center;
+  flex-direction: column;
   margin: 10px;
-  column-gap: 10px;
+  gap: 10px;
+  row-gap: 100px;
   display: flex;
   justify-content: space-around;
   text-align: center;
@@ -211,11 +212,39 @@ h3 {
   color: rgb(255, 222, 202);
 }
 
-.iframediv {
-  max-width: 80%;
+@media screen and (max-width: 700px) {
+  .iframediv {
+    flex-direction: column;
+    row-gap: 30px;
+  }
+}
 
+.contentdiv {
   display: flex;
-  row-gap: 23px;
+  flex-direction: column;
+  align-items: center;
+  padding: 5px 30px 50px;
+  border-radius: 10px;
+  border: 1px solid black;
+  background-color: rgb(105, 18, 18);
+  max-width: 80%;
+}
+.iframediv {
+  max-width: 100%;
+  display: flex;
+  column-gap: 23px;
+}
+
+.iframediv p {
+  white-space: nowrap;
+  margin: 0px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  font-size: clamp(19px, 1.5vw, 24px);
+}
+.videobox {
+  justify-content: space-between;
+  display: flex;
   flex-direction: column;
 }
 
@@ -237,9 +266,9 @@ audio {
   margin: 0 auto;
 }
 
-/* BLOGG END */
+/* ----------------------- BLOGG END-----------------------  */
 
-/* KONTAKT */
+/* ----------------------- KONTAKT-----------------------  */
 
 form {
   margin: 30px;
@@ -311,3 +340,4 @@ label {
   margin-top: 7px;
   text-align: start;
 }
+/* ----------------------- KONTAKT END -----------------------  */
